<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@id/menu_settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@id/menu_info_help"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_info_help">
    </item>
    <!-- <item
        android:id="@id/menu_search"
        android:orderInCategory="0"
        android:title="@string/menu_search" 
        android:showAsAction="never">
    </item> -->
    <item 
        android:id="@id/menu_refresh" 
        android:title="@string/menu_refresh" 
        android:icon="@drawable/ic_action_refresh" 
        android:showAsAction="always" 
        android:orderInCategory="1">
    </item>
    <item android:id="@+id/menu_speiseplan" android:title="@string/speiseplan" android:showAsAction="never"></item>

</menu>