<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="0dp"
    android:background="@color/activity_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/update_notification_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name_long"
        android:textColor="@color/dhbw_grau"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/update_notification_modified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/copyright_laws"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/created_by"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/version_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/version_info"
        android:textSize="14sp" />

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:minHeight="18dp"
        android:text=""
        android:textColor="@color/dhbw_rot_hell"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <View
        android:id="@+id/horizontal_line_red"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="@color/actionbar_title_color" />

    <ExpandableListView
        android:id="@+id/infoList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="0dp"
        android:groupIndicator="@drawable/lunch_group_selector"
        android:scrollbars="none" >
    </ExpandableListView>

</LinearLayout>