<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calendar_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@color/light_grey" >

    <de.patricklammers.vorlesungsplan.app.icalendar.CustomListView
        android:id="@+id/calendar_list_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/pull_for_history"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/orange"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/update_notification_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/update_notification_shadow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="0dip"
            android:scaleType="fitXY"
            android:src="@drawable/actionbar_shadow_inverted" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/update_info_title"
                    android:textColor="@color/dhbw_grau"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/update_notification_added"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/update_info_added_singular"
                    android:textColor="@color/dhbw_grau" />

                <TextView
                    android:id="@+id/update_notification_removed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/update_info_removed_singular"
                    android:textColor="@color/dhbw_grau" />

                <TextView
                    android:id="@+id/update_notification_modified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/update_info_modified_singular"
                    android:textColor="@color/dhbw_grau" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="0" >

                <ImageView
                    android:id="@+id/update_notification_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>